add aliase, tmux shortcuts and vim settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,8 @@ source-file /home/jordan/.local/lib/python2.7/site-packages/powerline/bindings/t
 
 #Set the default terminal mode to 256 color
 set -g default-terminal "screen-256color"
-
+#Enable mouse scroll with switch to th pane
+et -g terminal-overrides 'xterm*:smcup@:rmcup@'
 #Use UTF - 8
 set -g utf8 on
 set-option -g  status-utf8 on
@@ -13,6 +14,9 @@ set-window-option -g utf8 on
 set -g status on
 set -g status-interval 2
 
+#Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 
 
 #Rebind prefix to Ctrl + a 
 set -g prefix C-a
