Add aliases, bash, tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ source-file /home/jordan/.local/lib/python2.7/site-packages/powerline/bindings/t
 #Set the default terminal mode to 256 color
 set -g default-terminal "screen-256color"
 #Enable mouse scroll with switch to th pane
-et -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 #Use UTF - 8
 set -g utf8 on
 set-option -g  status-utf8 on
@@ -16,7 +16,6 @@ set -g status-interval 2
 
 #Start windows and panes at 1, not 0
 set -g base-index 1
-set -g pane-base-index 
 
 #Rebind prefix to Ctrl + a 
 set -g prefix C-a
@@ -56,8 +55,3 @@ set -g status-keys vi
 bind -t vi-edit Up   history-up
 bind -t vi-edit Down history-down
 
- #make active pane obvious.
-# set -g pane-border-fg blue
-# set -g pane-border-bg black
-# set -g pane-active-border-fg white
-# set -g pane-active-border-bg blue
