--- a/tmux.conf
+++ b/tmux.conf
@@ -55,3 +55,6 @@ set -g status-keys vi
 bind -t vi-edit Up   history-up
 bind -t vi-edit Down history-down
 
+#Bind L to last activate window
+bind a last-window
+
