Modify to fit tmux 2.0 change that new pane not use current's directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,10 +29,14 @@ bind C-a send-prefix
 #Reload this configure with prefix r
 bind r source-file ~/.tmux.conf\; display "conf file reloaded!" 
 
+#Create new window
+bind c neww -c '#{pane_current_path}'
+
 #Splitting  panes
 unbind %
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
+
 
 #Move between panes
 bind h select-pane -L
