--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,9 @@
+#Detect python version
+PYV=`python -c "import sys;t='{v[0]}.{v[1]}'.format(v=list(sys.version_info[:2]));sys.stdout.write(t)";`
+
 #Soure Powerline configure
-source-file /home/jordan/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+if [ -f ~/.local/lib/python$PYV/site-packages/powerline/bindings/tmux/powerline.sh ]; then
+   source ~/.local/lib/python$PYV/site-packages/powerline/bindings/tmux/powerline.sh
 
 #Set the default terminal mode to 256 color
 set -g default-terminal "screen-256color"
