--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,6 @@
-
 #Soure Powerline configure
-source ~/.local/lib/python$PYV/site-packages/powerline/bindings/tmux/powerline.sh
-   
+source /usr/lib/python3.4/site-packages/powerline/bindings/tmux/powerline.conf
+source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.sh
 
 #Set the default terminal mode to 256 color
 set -g default-terminal "screen-256color"
