--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,7 @@ set -g status-interval 2
 
 #Start windows and panes at 1, not 0
 set -g base-index 1
+set -g pane-base-index 1
 
 #Rebind prefix to Ctrl + a 
 set -g prefix C-a
