--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,5 @@
 #Soure Powerline configure
-source /usr/lib/python3.4/site-packages/powerline/bindings/tmux/powerline.conf
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.sh
+source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
 #Set the default terminal mode to 256 color
 set -g default-terminal "screen-256color"
