--- a/tmux.conf
+++ b/tmux.conf
@@ -60,6 +60,8 @@ set -g status-keys vi
 bind -t vi-edit Up   history-up
 bind -t vi-edit Down history-down
 
+
 #Bind L to last activate window
 bind a last-window
 
+set-option -g history-limit 5000
