--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -50,6 +50,17 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Smart pane switching with awareness of vim splits
+# see https://github.com/christoomey/vim-tmux-navigator
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# prefix + <C-l> to clear-screen
+bind C-l send-keys 'C-l'
+
 #Automatically set window title
 setw -g automatic-rename
 
@@ -64,3 +75,4 @@ bind -t vi-edit Down history-down
 bind a last-window
 
 set-option -g history-limit 5000
+
