--- a/config/XDG_CONFIG/Makefile
+++ b/config/XDG_CONFIG/Makefile
@@ -1,10 +1,11 @@
 BASEDIR:=$(shell pwd)
-zathura_dir:=${XDG_CONFIG_HOME}/zathura
-ranger_dir :=${XDG_CONFIG_HOME}/test
+zathura_dir  :=${XDG_CONFIG_HOME}/zathura
+ranger_dir   :=${XDG_CONFIG_HOME}/ranger
+rtorrent_dir :=${XDG_CONFIG_HOME}/rtorrent
 
-.PHONY: zathura ranger
+.PHONY: clean zathura ranger rtorrent
 
-all: zathura ranger
+all: zathura ranger rtorrent
 
 zathura: 
 	@test -d ${zathura_dir} || mkdir 		 ${zathura_dir} 
@@ -15,6 +16,10 @@ ranger:
 	@ln -sf  ${BASEDIR}/ranger/rifle.conf 	 ${ranger_dir}/rifle.conf
 	@ln -sf  ${BASEDIR}/ranger/rc.conf 	 	 ${ranger_dir}/rc.conf
 	@cp -R   ${BASEDIR}/ranger/colorschemes  ${ranger_dir}/
+rtorrent:
+	@test -d ${rtorrent_dir} || mkdir  		  ${rtorrent_dir} 
+	@test -d ${rtorrent_dir}/session || mkdir ${rtorrent_dir}/session 
+	@ln -sf  ${BASEDIR}/rtorrent/rtorrent.rc ${rtorrent_dir}/rtorrent.rc
 
 
 	
