Update tmux.conf, let ctrl-x bind to kill-window with auto-renumber window index.
Former-commit-id: 3a168163816c1789fe0ee846e5d9325d0f3a6cf4 [formerly 727914c4102ee56c0e7190ca301d545d2a73b6e3]
Former-commit-id: b9f2ef664e42dda0d0a46650ff9b6d5aab08abb5

--- a/config/XDG_CONFIG/tmux/tmux.conf
+++ b/config/XDG_CONFIG/tmux/tmux.conf
@@ -1,13 +1,18 @@
+# Tmux configuration
+# use tmux list-keys to show all key-binding
+
 #Soure Powerline configure
 source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 #Set the default terminal mode to 256 color
 set -g default-terminal "screen-256color"
 #Enable mouse scroll with switch to th pane
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
 #Use UTF - 8
 set -g utf8 on
 set-option -g  status-utf8 on
 set-window-option -g utf8 on
+set-option -g history-limit 5000
 
 #Enable utf-8 on status bar
 set -g status on
@@ -17,17 +22,14 @@ set -g status-interval 2
 set -g base-index 1
 set -g pane-base-index 1
 
-#Rebind prefix to Ctrl + a 
-set -g prefix C-a
-
-#Free the original ctrl-b prefix keybinding
+# Free the original ctrl-b and rebind prefix to Ctrl- a 
 unbind C-b 
-
+set -g prefix C-a
 #Ensure that we can sent ctrl-a to other app
 bind C-a send-prefix
 
-#Reload this configure with prefix r
-bind r source-file ~/.tmux.conf\; display "conf file reloaded!" 
+#Reload configuation
+bind r source-file ~/.config/tmux/tmux.conf\; display "conf file reloaded!" 
 
 #Create new window
 bind c neww -c '#{pane_current_path}'
@@ -36,7 +38,6 @@ bind c neww -c '#{pane_current_path}'
 unbind %
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
-
 
 #Move between panes
 bind h select-pane -L
@@ -50,7 +51,6 @@ bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 20
 
-
 #Automatically set window title
 setw -g automatic-rename
 
@@ -60,11 +60,8 @@ set -g status-keys vi
 bind -t vi-edit Up   history-up
 bind -t vi-edit Down history-down
 
-
 #Bind L to last activate window
 bind a last-window
-
-set-option -g history-limit 5000
 
 # Smart pane switching with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -76,3 +73,10 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Save history buffer to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
+
+# Rebind x to kill-window without confirmation, and do auto window renumber!
+unbind x
+bind x kill-window\; move-window -r
+
+# Renumber tmux window
+bind R  move-window -r\; display "Windows reordered..."
