Update daily configuration.
Former-commit-id: 3d8569092c64dae59f8e9896ca4f4206bf707b08 [formerly e42a07faaadde2284199b911a0e58f0d2650b684]
Former-commit-id: 9dda7a90d0cdeaad995b9812f30a705bff748a65

--- a/config/XDG_CONFIG/tmux/tmux.conf
+++ b/config/XDG_CONFIG/tmux/tmux.conf
@@ -75,8 +75,8 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
 # Rebind x to kill-window without confirmation, and do auto window renumber!
-unbind x
-bind x kill-window\; move-window -r
+# unbind x
+# bind x kill-window\; move-window -r
 
 # Renumber tmux window
 bind R  move-window -r\; display "Windows reordered..."
