--- a/config/XDG_CONFIG/ranger/rc.conf
+++ b/config/XDG_CONFIG/ranger/rc.conf
@@ -15,10 +15,10 @@ set confirm_on_delete multiple
 # Which script is used to generate file previews?
 # ranger ships with scope.sh, a script that calls external programs (see
 # README for dependencies) to preview images, archives, etc.
-set preview_script ~/.config/ranger/scope.sh
+# set preview_script ~/.config/ranger/scope.sh
 
 # Use the external preview script or display simple plain text previews?
-set use_preview_script true
+# set use_preview_script true
 
 # Preview images in full color with the external command "w3mimgpreview"?
 # This requires the console web browser "w3m" and a supported terminal.
@@ -33,7 +33,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow
-# set colorscheme zenburn-theme
+set colorscheme zenburn-theme
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
