--- a/config/XDG_CONFIG/i3/config
+++ b/config/XDG_CONFIG/i3/config
@@ -22,7 +22,7 @@ exec --no-startup-id goldendict
 exec --no-startup-id mpd 
 exec --no-startup-id thunar --daemon &
 exec --no-startup-id "/usr/bin/urxvtd --quiet --fork --opendisplay"
-exec --no-startup-id "/home/jordan/github/dotfile/startup.sh"
+exec --no-startup-id workrave
 
 exec --no-startup-id i3-msg 'workspace $ws1; exec urxvt'
 exec --no-startup-id i3-msg 'workspace $ws2; exec firefox'
@@ -31,6 +31,7 @@ exec --no-startup-id i3-msg 'workspace $ws3; exec thunar'
 # Execute chromium-browser app, line, use comand line option.
 exec --no-startup-id i3-msg 'workspace $ws4; exec chromium-browser --app  --app-id=menkifleemblimdogmoihpfopnplikde'
 exec --no-startup-id i3-msg 'workspace $ws4; exec chromium-browser --app  --app-id=hmjkmjkepdijhoojdojkdfohbdgmmhki'
+exec --no-startup-id i3-msg 'workspace $ws4; exec chromium-browser --app  --app-id=ejjicmeblgpmajnghnpcppodonldlgfn'
 
 exec --no-startup-id i3-msg 'workspace $ws6; exec quiterss'
 exec --no-startup-id i3-msg 'workspace $ws7; exec thunderbird'
@@ -62,7 +63,11 @@ bindsym Mod1+Return exec urxvt
 bindsym Mod1+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+m exec dmenu_run
+#bindsym Mod1+m exec dmenu_run
+
+# -dmenu show only .desktop entries instead with others .sh or command line utilities.
+bindsym Mod1+m exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu -fuzzy -i' 
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -195,7 +200,7 @@ bindsym Control+Mod1+l exec --no-startup-id i3lock --image ~/Pictures/Wallpaper/
 # Print screen
 bindsym Print exec scrot  ~/Pictures/screenshot/$(date +%F-%T).png
 bindsym --release $mod+Print exec scrot -s  ~/Pictures/screenshot/$(date +%F-%T).png
-bindsym --release Mod1+Print exec ~/usr/script/imgur-screenshot.sh
+#bindsym --release Mod1+Print exec ~/usr/script/imgur-screenshot.sh
 
 bindsym Control+$mod+t exec thunar
 bindsym Control+$mod+f exec firefox
