--- a/config/XDG_CONFIG/ranger/rc.conf
+++ b/config/XDG_CONFIG/ranger/rc.conf
@@ -253,7 +253,7 @@ map yn shell -d echo -n %f    | xsel -i
 # Filesystem Operations
 map =  chmod
 
-map cw console rename 
+map rn console rename 
 map A  eval fm.open_console('rename ' + fm.thisfile.basename)
 map I  eval fm.open_console('rename ' + fm.thisfile.basename, position=7)
 
