--- a/config/XDG_CONFIG/i3/i3blocks.conf
+++ b/config/XDG_CONFIG/i3/i3blocks.conf
@@ -26,10 +26,10 @@
 # Each block command defaults to the script name to avoid boilerplate.
 command=/home/jordan/.config/i3/i3blocks_cmd/$BLOCK_NAME
 
-full_text=〉
-align=center
-separator=false
-separator_block_width=14
+#full_text=〉
+#align=center
+#separator=false
+#separator_block_width=14
 
 [music]
 command=mpc current
@@ -73,7 +73,7 @@ interval=20
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 [iface]
 #instance=wlan0
-color=#00FF00
+#color=#00FF00
 interval=10
 separator=false
 
@@ -90,7 +90,7 @@ color=#d33682
 
 # CPU usage
 [cpu_usage]
-label=CPU
+label=
 interval=5
 min_width=CPU: 100.00%
 #separator=false
@@ -114,12 +114,12 @@ label=
 instance=Master
 interval=1
 signal=10
-color=#d70a53
+#color=#d70a53
 
 # Date Time
 #
 [time]
-label=
+label=
 command=date '+%Y-%m-%d %a %H:%M:%S'
 interval=5
-color=#50C878
+#color=#50C878
