[vimperatorrc]Add linkedin shortcut to vimperatorrc.

--- a/vim/.vimperatorrc
+++ b/vim/.vimperatorrc
@@ -111,6 +111,7 @@
         qmark e http://www45.eyny.com/index.php
         qmark f https://www.facebook.com/
         qmark g https://github.com/good5dog5
+        qmark i https://www.linkedin.com
         qmark k https://keep.google.com
         qmark l https://www.linkedin.com/
         qmark m https://mail.google.com/
