[ssh] Add ssh_config.
Former-commit-id: 8e08d454b6879b774bbe24d71a74a821bfea3624 [formerly f209f1f04ad047bba2737f47cab9918bda5a30de]
Former-commit-id: db580583b5f522860c1535f14d242da6af63a6e4

--- a/config/Makefile
+++ b/config/Makefile
@@ -22,6 +22,7 @@ install:
 	@ln -sfr ./colorgcc       ${HOME}/usr/bin/colorgcc
 	@mkdir -p ${HOME}/.cgdb
 	@ln -sfr ./cgdb/cgdbrc    ${HOME}/.cgdb/cgdbrc
+	@ln -sfr ./ssh/ssh_config ${HOME}/.ssh/config
 	
 	@$(MAKE) -C ./mutt install
 
