Fix xdb_config's Makefile errors.
Former-commit-id: 69d32ba5704ff1dd9bb8540a9b2b20668b369f4a [formerly ee54e9781cdf9a07c171cb855acc9462003fa0c3]
Former-commit-id: 8dc24d00c08773b7656a46b88e5feb0e32537043

--- a/config/XDG_CONFIG/Makefile
+++ b/config/XDG_CONFIG/Makefile
@@ -32,7 +32,7 @@ ranger_clean:
 rtorrent:
 	@echo "Install rtorrent settings..."
 	$(call mk_symbolic_link, rtorrent)
-	@mkdir -p ${rtorrent_dir/session}
+	@mkdir -p ${rtorrent_dir}/session
 
 tig:
 	@echo "Install tig settings..."
@@ -50,8 +50,7 @@ todo:
 i3:
 	@echo "Install i3 settings..."
 	$(call mk_symbolic_link, i3)
-	cp -R ./i3/icons 		${XDG_CONFIG_HOME}/i3/
-	cp -R ./i3/i3blocks_cmd ${XDG_CONFIG_HOME}/i3/
+	@cp -R ./i3/i3blocks_cmd ${XDG_CONFIG_HOME}/i3/
 
 Thunar:
 	@echo "Install Thunar settings..."
