--- a/config/.bcrc
+++ b/config/.bcrc
@@ -1,33 +1,9 @@
-scale=10
-define f(x) {
-    if (x <= 1) return (1);
-    return (x*f(x-1));
-}
+ibase=10
 # Reset base to ten
 define rstb() {
 	obase=ibase=A;
 }
 define int(x) { auto os;os=scale;scale=0;x/=1;scale=os;return(x) } 
 
-# Greatest common divisor of x and y
-define int_gcd(x,y) {
-  auto r,os;
-  os=scale;scale=0
-  x/=1;y/=1
-  while(y>0){r=x%y;x=y;y=r}
-  scale=os
-  return(x)
-}
-# Lowest common multiple of x and y
-define int_lcm(x,y) {
-  auto r,m,os;
-  os=scale;scale=0
-  x/=1;y/=1
-  m=x*y
-  while(y>0){r=x%y;x=y;y=r}
-  m/=x
-  scale=os
-  return(m)
-}
 
 # vim: set ft=bc:
