--- a/config/XDG_CONFIG/Makefile
+++ b/config/XDG_CONFIG/Makefile
@@ -32,7 +32,7 @@ ranger_clean:
 rtorrent:
 	@echo "Install rtorrent settings..."
 	$(call mk_symbolic_link, rtorrent)
-	@mkdir -p ${rtorrent_dir}/session
+	@mkdir -p ${rtorrent_dir/session}
 
 tig:
 	@echo "Install tig settings..."
