[gitconfig] Add alias to check previous and next commit.

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -35,6 +35,9 @@
    ds        = diff --stat
    dc        = diff --cached
 
+   prev = checkout HEAD^1
+   next = "!sh -c 'git log --reverse --pretty=%H master | awk \"/$(git rev-parse HEAD)/{getline;print}\" | xargs git checkout'"
+
 [core]
    editor    = vim
 [color "diff"]
