--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -40,6 +40,7 @@
 
 [core]
    editor    = vim
+	attributesfile = /home/jordan/.gitattributes
 [color "diff"]
    meta      = yellow bold
    frag      = magenta bold
@@ -55,3 +56,7 @@
     tool = vimdiff
     conflictstyle = diff3
     prompt = false
+
+[filter "clean_ipynb"]
+    clean = jq --indent 1 --monochrome-output '. + if .metadata.git.suppress_outputs | not then { cells: [.cells[] | . + if .cell_type == \"code\" then { outputs: [], execution_count: null } else {} end ] } else {} end'
+    smudge = cat
