--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -114,7 +114,7 @@
         qmark i https://www.linkedin.com
         qmark k https://keep.google.com
         qmark l https://www.linkedin.com/
-        qmark m https://mail.google.com/
+        qmark m https://inbox.google.com/
         qmark p telnet://ptt.cc
         qmark r https://getpocket.com/a/queue/
         qmark s https://logoswhale.sandcats.io
