--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,7 +2,7 @@
 # use tmux list-keys to show all key-binding
 
 #Soure Powerline configure
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source ~/anaconda3/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
 #Set the default terminal mode to 256 color
 set -g default-terminal "screen-256color"
 #Enable mouse scroll with switch to th pane
