--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -114,7 +114,7 @@
         qmark i https://www.linkedin.com
         qmark k https://keep.google.com
         qmark l https://www.linkedin.com/
-        qmark m https://inbox.google.com/
+        qmark m https://inbox.google.com/u/1/
         qmark p telnet://ptt.cc
         qmark r https://getpocket.com/a/queue/
         qmark s https://logoswhale.sandcats.io
@@ -132,6 +132,7 @@ noremap U :undo<Space>
 autocmd LocationChange .*                             js modes.passAllKeys = false
 autocmd LocationChange mail\\.google\\.com            js modes.passAllKeys = true
 autocmd LocationChange localhost:8890/notebooks       js modes.passAllKeys = true
+autocmd LocationChange localhost:8891/notebooks       js modes.passAllKeys = true
 autocmd LocationChange localhost:8888/notebooks       js modes.passAllKeys = true
 " autocmd LocationChange reddit\\.com            js modes.passAllKeys = true
 
