--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -31,9 +31,9 @@ command=/home/jordan/.config/i3/i3blocks_cmd/$BLOCK_NAME
 #separator=false
 #separator_block_width=14
 
-[music]
-command=mpc current
-interval=20
+# [music]
+# command=mpc current
+# interval=20
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
