--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -56,7 +56,6 @@ bind -r L resize-pane -R 20
 setw -g automatic-rename
 
 #Enable vim key
-setw -g mode-keys vi
 set -g status-keys vi
 bind -t vi-edit Up   history-up
 bind -t vi-edit Down history-down
@@ -75,9 +74,29 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # Save history buffer to file
 bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
-# Rebind x to kill-window without confirmation, and do auto window renumber!
-# unbind x
-# bind x kill-window\; move-window -r
+####################
+#  mac os related  #
+####################
+
+# Copy-paste integration
+# set-option -g default-command "reattach-to-user-namespace -l bash"
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+set-option -sg escape-time 10
+
 
 # Renumber tmux window
 bind R  move-window -r\; display "Windows reordered..."
