Macbook pro updated.

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
-Host github.com
-   HostName github.com
-   user git
-   IdentityFile ~/.ssh/github_rsa
+# Host github.com
+#    HostName github.com
+#    user git
+#    IdentityFile ~/.ssh/github_rsa
 
 Host bitbucket.org
     HostName bitbucket.org
@@ -98,7 +98,7 @@ HOST stag
 
 
 # Production
-Host 10.15.*.* videopass-production*
+Host 10.15.*.* videopass-production* prod-*
    StrictHostKeyChecking no
    IdentityFile /Users/jordanhuang/.ssh/jordan@kkstream.com_rsa
    User ubuntu
@@ -107,7 +107,7 @@ Host 10.15.*.* videopass-production*
    ForwardAgent yes
 
 # Staging
-Host 10.13.*.* videopass-staging*
+Host 10.13.*.* videopass-staging* stag-*
    StrictHostKeyChecking no
    IdentityFile /Users/jordanhuang/.ssh/jordan@kkstream.com_rsa
    User ubuntu
@@ -116,7 +116,7 @@ Host 10.13.*.* videopass-staging*
    ForwardAgent yes
 
 # Testing
-Host 10.9.*.* videopass-testing*
+Host 10.9.*.* videopass-testing* test-*
    StrictHostKeyChecking no
    IdentityFile /Users/jordanhuang/.ssh/jordan@kkstream.com_rsa
    User ubuntu
