--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -152,7 +152,9 @@ map R     reload_cwd
 map <C-r> reset
 map <C-l> redraw_window
 map <C-c> abort
+map <C-f> fzf_select
 map <esc> change_mode normal
+
 
 map i display_file
 map ? help
@@ -211,7 +213,6 @@ copymap <LEFT>     h
 copymap <RIGHT>    l
 copymap <HOME>     gg
 copymap <END>      G
-copymap <PAGEDOWN> <C-F>
 copymap <PAGEUP>   <C-B>
 
 map J  move down=0.5  pages=True
